
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


typedef int yoml_t ;
struct TYPE_3__ {int pathconf; } ;
typedef TYPE_1__ h2o_configurator_context_t ;
typedef int h2o_configurator_command_t ;


 int h2o_configurator_get_one_of (int *,int *,char*) ;
 int h2o_status_register (int ) ;

__attribute__((used)) static int on_config_status(h2o_configurator_command_t *cmd, h2o_configurator_context_t *ctx, yoml_t *node)
{
    switch (h2o_configurator_get_one_of(cmd, node, "OFF,ON")) {
    case 0:
        return 0;
    case 1:
        h2o_status_register(ctx->pathconf);
        return 0;
    default:
        return -1;
    }
}
