; ModuleID = '/home/carl/AnghaBench/h2o/lib/handler/configurator/extr_status.c_on_config_status.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/handler/configurator/extr_status.c_on_config_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@.str = private unnamed_addr constant [7 x i8] c"OFF,ON\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.TYPE_3__*, i32*)* @on_config_status to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @on_config_status(i32* %0, %struct.TYPE_3__* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_3__*, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %6, align 8
  store i32* %2, i32** %7, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = load i32*, i32** %7, align 8
  %10 = call i32 @h2o_configurator_get_one_of(i32* %8, i32* %9, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  switch i32 %10, label %17 [
    i32 0, label %11
    i32 1, label %12
  ]

11:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %18

12:                                               ; preds = %3
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @h2o_status_register(i32 %15)
  store i32 0, i32* %4, align 4
  br label %18

17:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %18

18:                                               ; preds = %17, %12, %11
  %19 = load i32, i32* %4, align 4
  ret i32 %19
}

declare dso_local i32 @h2o_configurator_get_one_of(i32*, i32*, i8*) #1

declare dso_local i32 @h2o_status_register(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
